# spawn_process

./: CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/Cool/: spawn_process.hpp
src/: spawn_process.cpp
tests/: CMakeLists.txt  dummy_exe.cpp  tests.cpp
